--- a/movie-ui/package.json
+++ b/movie-ui/package.json
@@ -12,6 +12,8 @@
     "buefy": "^0.8.20",
     "bulma": "^0.9.0",
     "core-js": "^3.6.5",
+    "path": "^0.12.7",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
