--- a/movie-ui/package.json
+++ b/movie-ui/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.6.5",
     "path": "^0.12.7",
     "serve-static": "^1.14.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
