--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.9.24",
     "node-fetch": "^2.6.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "unirest": "^0.6.0"
   }
 }
